--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 
 <body>
+  <!-- Header Area Before Card Grid  -->
   <div class="heading">
     <h1>Reliable, efficient delivery</h1>
     <h2>Powered by Technology</h2>
     <p class="heading-p">Our Artificial Intelligence powered tools use millions of project data points
       to ensure that your project is successful</p>
   </div>
+  <!-- Grid Begins Here  -->
   <div class="grid">
     <div class="card card1">
       <h3>Supervisor</h3>
@@ -24,54 +26,32 @@
       <div class="images">
         <img src="images/icon-supervisor.svg" alt="Supervisor Icon">
       </div>
-
     </div>
 
-<div class="card card2">
-  <h3>Team Builder</h3>
-  <p>Scans our talent network to create the optimal team for your project</p>
-  <div class="images">
-  <img src="images/icon-team-builder.svg" alt="Team Builder Icon">
+    <div class="card card2">
+      <h3>Team Builder</h3>
+      <p>Scans our talent network to create the optimal team for your project</p>
+      <div class="images">
+        <img src="images/icon-team-builder.svg" alt="Team Builder Icon">
+      </div>
+    </div>
+
+    <div class="card card3">
+      <h3>Karma</h3>
+      <p>Regularly evaluates our talent to ensure quality</p>
+      <div class="images">
+        <img src="images/icon-karma.svg" alt="Karma Icon">
+      </div>
+    </div>
+
+    <div class="card card4">
+      <h3>Calculator</h3>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+      <div class="images">
+        <img src="images/icon-calculator.svg" alt="Calculator Icon">
+      </div>
+    </div>
   </div>
-</div>
-
-<div class="card card3">
-  <h3>Karma</h3>
-  <p>Regularly evaluates our talent to ensure quality</p>
-  <div class="images">
-  <img src="images/icon-karma.svg" alt="Karma Icon">
-  </div>
-
-</div>
-
-<div class="card card4">
-  <h3>Calculator</h3>
-  <p>Uses data from past projects to provide better delivery estimates</p>
-  <div class="images">
-    <img src="images/icon-calculator.svg" alt="Calculator Icon">
-  </div>
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </div>
-
-
 
   <footer>
     <p class="attribution">
